k3s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-frontend
  namespace: my
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: library-frontend
  template:
    metadata:
      labels:
        app: library-frontend
    spec:
      restartPolicy: Always
      nodeSelector:
        kubernetes.io/hostname: master-node
      imagePullSecrets:
      - name: my-regcred
      containers:
      - name: library-frontend
        image: registry.reinhardjs.my.id/library-frontend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9000
        # env:
        # - name: NEXT_PUBLIC_API_URL
        #   value: "https://library-backend.reinhardjs.my.id/api"

---
apiVersion: v1
kind: Service
metadata:
  name: library-frontend
  namespace: my
spec:
  selector:
    app: library-frontend
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: library-frontend-ingress
  namespace: my
  annotations:
    traefik.ingress.kubernetes.io/ssl-cert: "reinhardjs-my-id-tls-secret"
    traefik.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: library.reinhardjs.my.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: library-frontend
            port:
              number: 9000
  tls:
  - hosts:
    - library.reinhardjs.my.id
    secretName: reinhardjs-my-id-tls-secret
